# nnaf-data

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: database.py  in100.py  voc07.py
src/nnaf_data/: __init__.py  basic.py  in100.py  voc07.py
